package bom;

public enum AnswerStatus {
    IN_PROGRESS,
    NOT_STARTED,
    ANSWERED,
    GRADED
}
