package bom;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class Condition {

    private Long id;

    private String name;
}
