package bom;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class Discipline {

    private Long id;

    private String name;
}
