package bom;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class Grade {

    private Long id;

    private float value;

    private String comment;
}
