package bom;

public enum PersonalExamStatus {
    IN_PROGRESS,
    NOT_STARTED,
    FINISHED
}
