@startuml
legend right
    |       Color    |             Module   |
    |<#FF5733>| common               |
    |<#AF7AC5>| domain               |
    |<#5DADE2>| ms-check-task        |
    |<#F4D03F>| ms-lessons           |
    |<#ABB2B9>| ms-test-producer     |
    |<#E59866>| ms-users             |
end legend

entity Discipline #AF7AC5{
id: long
name: string
}

entity Topic #AF7AC5{
id: long
name: string
}

entity Task #AF7AC5{
id: long
question: string
answer: string
}

entity Condition #AF7AC5{
id: long
name: string
}

entity TaskDomain #AF7AC5{
id: long
name: string
script: string
}

entity Exam #AF7AC5{
id: long
name: string
}

entity PersonalExam #AF7AC5{
id: long
name: string
date: date
}

entity Answer #AF7AC5{
id: long
question: string
value: string
}

enum PersonalExamStatus #AF7AC5{
In Progress,
Not Started,
Finished
}

enum AnswerStatus #AF7AC5{
In Progress,
Not Started,
Answered,
Graded
}

entity Grade #AF7AC5{
id: long
value: int
comment: string
}

entity Student #E59866{
id: long
name: string
middlename: string
lastname: string
email:string
password:string
group:string
photo:?
}

entity Teacher #E59866{
id: long
name: string
middlename: string
lastname: string
email:string
password:string
photo:?
}

entity Group #E59866{
id: long
name: string
}

entity ExamConfiguration #ABB2B9{
id: long
countOfTask: int
}

ExamConfiguration "N examParameter" --o "1" Exam
Topic "1" --o "1" ExamConfiguration
Answer o-- AnswerStatus
PersonalExam o-- PersonalExamStatus
PersonalExam "1" o-- "N answers" Answer
Task "1" --o "1" Answer
Grade "1" --o "1" Answer
Student "1" --o "1" PersonalExam
Task "1" o-- "N conditions" Condition
Task "N tasks" o--o "N topics" Topic
Task "1" o-- "1" TaskDomain
Task "N tasks" --o "1" PersonalExam
Student "1" --o "N groups" Group

Exam "1" --o "N personalExams" PersonalExam

Discipline "1" o-- "N topics" Topic
Discipline "N disciplines" o-- "1" Teacher
@enduml